Bug 1153694 - Don't let nsDisplayFixedPosition cause unnecessary layerization around itself. r=mattwoodrow

MozReview-Commit-ID: 66q3PkOdvTe